fix: use docker-cli-buildx package

--- a/internal/test/vm/Dockerfile
+++ b/internal/test/vm/Dockerfile
@@ -11,7 +11,7 @@ RUN apk update && apk add --no-cache \
     bash \
     docker \
     docker-compose \
-    docker-buildx \
+    docker-cli-buildx \
     git \
     make \
     openrc \
