--- a/internal/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
+++ b/internal/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
@@ -33,7 +33,8 @@ spec:
         name: maincode
   containers:
     - name: httppinger
-      image: httppinger:dev
+      image: ghcr.io/open-telemetry/obi-testimg:httppinger-net
+      imagePullPolicy: IfNotPresent       
       env:
         - name: TARGET_URL
           value: "http://otherinstance:8080"
@@ -90,8 +91,8 @@ spec:
             claimName: testoutput
       containers:
         - name: otherinstance
-          image: testserver:dev
-          imagePullPolicy: Never # loaded into Kind from localhost
+          image: ghcr.io/open-telemetry/obi-testimg:gotestserver-net
+          imagePullPolicy: IfNotPresent 
           ports:
             # exposing hostports to enable operation from tests
             - containerPort: 8080
