--- a/internal/test/integration/docker-compose-1.17.yml
+++ b/internal/test/integration/docker-compose-1.17.yml
@@ -15,6 +15,7 @@ services:
       - "5051:5051"
     environment:
       LOG_LEVEL: DEBUG
+      OTEL_RESOURCE_ATTRIBUTES: "service.version=1.0.0"
 
   autoinstrumenter:
     build:
@@ -44,6 +45,8 @@ services:
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_HOSTNAME: "beyla"
+      BEYLA_PROMETHEUS_EXTRA_SPAN_RESOURCE_ATTRIBUTES: "service.version"
+      BEYLA_EXTRA_SPAN_RESOURCE_ATTRIBUTES: "service.version"
     ports:
       - "8999:8999" # Prometheus scrape port, if enabled via config
 
@@ -84,7 +87,7 @@ services:
       - "9090:9090"
 
   jaeger:
-    image: jaegertracing/all-in-one:1.57@sha256:8f165334f418ca53691ce358c19b4244226ed35c5d18408c5acf305af2065fb9
+    image: jaegertracing/all-in-one:1.60@sha256:4fd2d70fa347d6a47e79fcb06b1c177e6079f92cba88b083153d56263082135e
     ports:
       - "16686:16686" # Query frontend
       - "4317" # OTEL GRPC traces collector
