--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,6 +2,10 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: ["config:best-practices", "helpers:pinGitHubActionDigestsToSemver"],
   ignorePaths: [
+    // the following components are used to test the behavior of Beyla with legacy versions of libraries
+    // so we don't want to get them updated
+    "internal/test/integration/components/testserver_1.17",
+    "internal/test/integration/components/old_grpc",
     // github.com/Shopify/sarama has been moved to github.com/IBM/sarama
     // but we keep supporting the go-offsets for the outdated library, which must not
     // be updated.
@@ -19,13 +23,6 @@
     {
       matchUpdateTypes: ["minor", "major"],
       schedule: ["before 8am on Monday"],
-    },
-    {
-      description: "Disable Go 1.17 testserver updates",
-      matchFileNames: ["internal/test/integration/components/testserver_1.17"],
-      matchDatasources: ["docker"],
-      matchPackageNames: ["golang"],
-      enabled: false,
     },
   ],
   labels: ["dependencies"],
