--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -14,6 +14,16 @@ on:
       - "vendor/**"
       - "Makefile"
       - ".github/workflows/pull_request_integration_tests_arm.yml"
+      - ".obi-src/**.go"
+      - ".obi-src/go.mod"
+      - ".obi-src/go.sum"
+      - ".obi-src/bpf/**"
+      - ".obi-src/internal/**"
+      - ".obi-src/pkg/**"
+      - ".obi-src/cmd/**"
+      - ".obi-src/vendor/**"
+      - ".obi-src/Makefile"
+
   pull_request:
     branches: ["main", "release-*"]
     paths:
@@ -27,6 +37,15 @@ on:
       - "vendor/**"
       - "Makefile"
       - ".github/workflows/pull_request_integration_tests_arm.yml"
+      - ".obi-src/**.go"
+      - ".obi-src/go.mod"
+      - ".obi-src/go.sum"
+      - ".obi-src/bpf/**"
+      - ".obi-src/internal/**"
+      - ".obi-src/pkg/**"
+      - ".obi-src/cmd/**"
+      - ".obi-src/vendor/**"
+      - ".obi-src/Makefile"
 
 # Set restrictive permissions at workflow level
 permissions:
