Update OBI to latest (#2375)
* Update OBI to latest

* Sync tests from OBI

* Update OBI and fix breaking changes

* sync python images with OBI integration tests

* Fix linux test

* fix startup error

* fix more python test images

* Fix extra python test

* Fix survey info accidentally triggering

* Update node testservers

* Fix wrong assumptions wrt survey_info mode

* fix some failing tests

* Update OBI to latest

* update OBI again and fix integration tests ARM

* Remove Java OTEL SDK tests

* Fix workflow test triggering on .obi-src update

--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -14,6 +14,8 @@ on:
       - "vendor/**"
       - "Makefile"
       - ".github/workflows/pull_request_integration_tests_arm.yml"
+      - ".obi-src/**"
+
   pull_request:
     branches: ["main", "release-*"]
     paths:
@@ -27,6 +29,7 @@ on:
       - "vendor/**"
       - "Makefile"
       - ".github/workflows/pull_request_integration_tests_arm.yml"
+      - ".obi-src/**"
 
 # Set restrictive permissions at workflow level
 permissions:
