--- a/internal/test/oats/sql/docker-compose-beyla-gomysqlclient.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-gomysqlclient.yml
@@ -41,14 +41,14 @@ services:
     pid: "service:testserver"
     environment:
       GOCOVERDIR: "/coverage"
-      OTEL_EBPF_TRACE_PRINTER: "text"
-      OTEL_EBPF_OPEN_PORT: {{ .ApplicationPort }}
-      OTEL_EBPF_SERVICE_NAMESPACE: "integration-test"
-      OTEL_EBPF_METRICS_INTERVAL: "10ms"
-      OTEL_EBPF_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
-      OTEL_EBPF_BPF_BATCH_TIMEOUT: "10ms"
-      OTEL_EBPF_LOG_LEVEL: "DEBUG"
-      OTEL_EBPF_BPF_DEBUG: "true"
+      BEYLA_TRACE_PRINTER: "text"
+      BEYLA_OPEN_PORT: {{ .ApplicationPort }}
+      BEYLA_SERVICE_NAMESPACE: "integration-test"
+      BEYLA_METRICS_INTERVAL: "10ms"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
+      BEYLA_BPF_BATCH_TIMEOUT: "10ms"
+      BEYLA_LOG_LEVEL: "DEBUG"
+      BEYLA_BPF_DEBUG: "true"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4318"
     depends_on:
       testserver:
