--- a/internal/test/oats/http/docker-compose-beyla-python-grpc.yml
+++ b/internal/test/oats/http/docker-compose-beyla-python-grpc.yml
@@ -40,9 +40,11 @@ services:
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "true"
       BEYLA_BPF_CONTEXT_PROPAGATION: "all"
+      BEYLA_METRICS_FEATURES: "application,application_span,application_service_graph"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4318"
     depends_on:
       grpcsrv:
