--- a/internal/test/oats/http/docker-compose-java-routes-custom.yml
+++ b/internal/test/oats/http/docker-compose-java-routes-custom.yml
@@ -24,9 +24,11 @@ services:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "true"
+      OTEL_EBPF_JAVA_ROUTE_HARVEST_DELAY: "10s"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4318"
     depends_on:
       testserver:
