--- a/internal/test/integration/components/pythongrpc/Dockerfile
+++ b/internal/test/integration/components/pythongrpc/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile that will build a container that runs python with FastAPI and uvicorn on port 8080
 FROM python:3.14@sha256:595140b768992c05b096570e5ae487a02a2c6b3ae23ba33ce0fc34b99579c98e
 EXPOSE 8080
-RUN pip install fastapi uvicorn grpcio grpcio_tools
+RUN pip install fastapi uvicorn grpcio grpcio_tools requests
 COPY main.py /main.py
 COPY route_guide_db.json /route_guide_db.json
 COPY route_guide_pb2_grpc.py /route_guide_pb2_grpc.py
