--- a/internal/test/oats/http/docker-compose-java-tls-netty.yml
+++ b/internal/test/oats/http/docker-compose-java-tls-netty.yml
@@ -20,7 +20,7 @@ services:
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_EXECUTABLE_PATH: "java"
+      BEYLA_EXECUTABLE_NAME: "java"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
