add docs for helm chart deployment for app o11y

--- a/charts/beyla/templates/daemon-set.yaml
+++ b/charts/beyla/templates/daemon-set.yaml
@@ -63,6 +63,7 @@ spec:
                 - CHECKPOINT_RESTORE
                 - DAC_READ_SEARCH
                 - PERFMON
+                - SYS_ADMIN
               {{- if .Values.contextPropagation.enabled }}
                 - NET_ADMIN
               {{- end }}
