--- a/internal/test/oats/http/configs/tempo-config.yaml
+++ b/internal/test/oats/http/configs/tempo-config.yaml
@@ -1,12 +1,12 @@
 server:
   http_listen_port: 3200
-  grpc_listen_port: 9096
 
 distributor:
   receivers:
     otlp:
       protocols:
         grpc:
+          endpoint: "tempo:4317"
 
 storage:
   trace:
