--- a/internal/test/oats/mongo/docker-compose-generic-template.yml
+++ b/internal/test/oats/mongo/docker-compose-generic-template.yml
@@ -22,16 +22,17 @@ services:
     command:
       - --config.file=/config.yaml
     ports:
+      - 4317:4317
       - "{{ .TempoHTTPPort }}:3200"
 #  loki:
 #    image: grafana/loki:2.9.0
 #    ports:
 #      - "{{ .LokiHTTPPort }}:3100"
   collector:
-    image: otel/opentelemetry-collector-contrib:0.103.0@sha256:0dffde3e58fc3f255cad861deb62d7c51505ce961a8a7e2107c7fc2668b774a3
+    image: otel/opentelemetry-collector-contrib:0.143.1@sha256:f051aff195ad50ed5ad9d95bcdd51d7258200c937def3797cf830366ed62e034
     volumes:
       - "{{ .ConfigDir }}/otelcol-config.yaml:/config.yaml"
     command:
       - --config=file:/config.yaml
-      # we currently don't support this in our dashboards and grafana agent doesn't understand it yet
-      - --feature-gates=-pkg.translator.prometheus.NormalizeName
+    ports:
+      - 4318:4318
