--- a/.github/workflows/pull_request_check_license.yml
+++ b/.github/workflows/pull_request_check_license.yml
@@ -2,9 +2,9 @@ name: Check third-party licenses
 
 on:
   push:
-    branches: [ 'main', 'release-*' ]
+    branches: ["main", "release-*"]
   pull_request:
-    branches: [ 'main', 'release-*' ]
+    branches: ["main", "release-*"]
 
 # Set restrictive permissions at workflow level
 permissions:
@@ -14,9 +14,6 @@ jobs:
   check-licenses:
     name: check-licenses
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: [ '1.25' ]
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
         with:
@@ -24,7 +21,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3.6.1
         with:
-          cache: 'false'
-          go-version: ${{ matrix.go }}
+          cache: "false"
+          go-version-file: "go.mod"
       - name: Check licenses
         run: make check-licenses
