build: don't lint sync'd code

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,6 +26,7 @@ linters:
       - ^docs
       - ^.obi-src
       - ^vendor
+      - ^internal/test/integration/components # Synced from OBI, lint issues should be fixed upstream
     presets:
       - std-error-handling
     # Log a warning if an exclusion rule is unused.
