--- a/internal/test/integration/configs/instrumenter-config-override-svcname.yml
+++ b/internal/test/integration/configs/instrumenter-config-override-svcname.yml
@@ -1,4 +1,8 @@
 service_name: overridden-svc-name
+discovery:
+  instrument:
+    - name: testserver
+      open_ports: 8080,8081,8082,8083,8087,8383
 routes:
   patterns:
     - /basic/:rnd
