--- a/internal/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/internal/test/integration/configs/instrumenter-config-promscrape.yml
@@ -1,6 +1,9 @@
 discovery:
   survey:
     - k8s_namespace: "*"
+  instrument:
+    - name: testserver
+      open_ports: 8082
 routes:
   patterns:
     - /basic/:rnd
