--- a/internal/test/integration/docker-compose-other-grpc.yml
+++ b/internal/test/integration/docker-compose-other-grpc.yml
@@ -50,7 +50,7 @@ services:
       BEYLA_METRICS_FEATURES: "application,application_span"
       BEYLA_PROMETHEUS_FEATURES: "application,application_span"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
-      BEYLA_EXECUTABLE_PATH: "${BEYLA_EXECUTABLE_PATH}"
+      BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_METRICS_INTERVAL: "10ms"
