--- a/internal/test/integration/docker-compose-php-fpm-sock.yml
+++ b/internal/test/integration/docker-compose-php-fpm-sock.yml
@@ -61,7 +61,7 @@ services:
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_EXECUTABLE_PATH: "(nginx|php-fpm)"
+      BEYLA_EXECUTABLE_NAME: "(nginx|php-fpm)"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
