--- a/internal/test/integration/docker-compose-php-fpm.yml
+++ b/internal/test/integration/docker-compose-php-fpm.yml
@@ -53,7 +53,7 @@ services:
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_EXECUTABLE_PATH: "(nginx|php-fpm)"
+      BEYLA_EXECUTABLE_NAME: "(nginx|php-fpm)"
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
