--- a/internal/test/integration/docker-compose.yml
+++ b/internal/test/integration/docker-compose.yml
@@ -39,26 +39,25 @@ services:
       - ../../../testoutput/run-base${TESTSERVER_DOCKERFILE_SUFFIX}:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
-    pid: "host"
+    pid: "service:testserver"
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "json"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
-      BEYLA_METRICS_FEATURES: "application,application_span_otel,application_process,application_service_graph,ebpf,application_host"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span_otel,application_process,application_service_graph,ebpf,application_host"
       BEYLA_PROMETHEUS_FEATURES: "application,application_span_otel,application_process,application_service_graph,ebpf,application_host"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
-      BEYLA_EXECUTABLE_PATH: "${BEYLA_EXECUTABLE_PATH}"
+      BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
       BEYLA_SKIP_GO_SPECIFIC_TRACERS: "${BEYLA_SKIP_GO_SPECIFIC_TRACERS}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
-      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_PROCESSES_INTERVAL: "100ms"
       BEYLA_HOSTNAME: "beyla"
-      BEYLA_RENAME_UNRESOLVED_HOSTS: ""
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_PROMETHEUS_EXTRA_SPAN_RESOURCE_ATTRIBUTES: "service.version"
       BEYLA_EXTRA_SPAN_RESOURCE_ATTRIBUTES: "service.version"
     ports:
