--- a/internal/test/integration/docker-compose-java.yml
+++ b/internal/test/integration/docker-compose-java.yml
@@ -30,7 +30,7 @@ services:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${JAVA_OPEN_PORT}"
-      BEYLA_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_PATH}"
+      BEYLA_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_NAME}"
       OTEL_SERVICE_NAME: "${OTEL_SERVICE_NAME}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
