--- a/internal/test/integration/docker-compose-java-host.yml
+++ b/internal/test/integration/docker-compose-java-host.yml
@@ -26,7 +26,7 @@ services:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${JAVA_OPEN_PORT}"
-      BEYLA_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_PATH}"
+      BEYLA_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_NAME}"
       OTEL_SERVICE_NAME: "${OTEL_SERVICE_NAME}"
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
