--- a/internal/test/integration/docker-compose-1.16.yml
+++ b/internal/test/integration/docker-compose-1.16.yml
@@ -27,7 +27,7 @@ services:
     environment:
       BEYLA_CONFIG_PATH: "/configs/instrumenter-config-java.yml"
       GOCOVERDIR: "/coverage"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: 8080
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
