--- a/internal/test/integration/docker-compose-1.17.yml
+++ b/internal/test/integration/docker-compose-1.17.yml
@@ -33,7 +33,7 @@ services:
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
       OTEL_GO_AUTO_TARGET_EXE: "${OTEL_GO_AUTO_TARGET_EXE}"
