--- a/internal/test/integration/docker-compose-discovery.yml
+++ b/internal/test/integration/docker-compose-discovery.yml
@@ -35,7 +35,7 @@ services:
     pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
