--- a/internal/test/integration/docker-compose-elasticsearch.yml
+++ b/internal/test/integration/docker-compose-elasticsearch.yml
@@ -80,7 +80,7 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_METRICS_FEATURES: "application"
+      BEYLA_OTEL_METRICS_FEATURES: "application"
       BEYLA_BPF_BUFFER_SIZE_HTTP: 1024
       BEYLA_HTTP_ELASTICSEARCH_ENABLED: true
       BEYLA_PROTOCOL_DEBUG_PRINT: true
