--- a/internal/test/integration/docker-compose-error-test.yml
+++ b/internal/test/integration/docker-compose-error-test.yml
@@ -46,7 +46,7 @@ services:
         condition: service_started
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
