--- a/internal/test/integration/docker-compose-go-mqtt.yml
+++ b/internal/test/integration/docker-compose-go-mqtt.yml
@@ -61,9 +61,9 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_TRACES_INSTRUMENTATIONS: "*"
-      BEYLA_METRICS_INSTRUMENTATIONS: "*"
-      BEYLA_METRICS_FEATURES: "application"
+      BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "*"
+      BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "*"
+      BEYLA_OTEL_METRICS_FEATURES: "application"
       BEYLA_PROTOCOL_DEBUG_PRINT: "true"
     depends_on:
       testserver:
