--- a/internal/test/integration/docker-compose-java-dist.yml
+++ b/internal/test/integration/docker-compose-java-dist.yml
@@ -42,7 +42,7 @@ services:
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
       BEYLA_JAVA_ROUTE_HARVEST_DELAY: "10s"
-      BEYLA_METRICS_FEATURES: "application,application_span,application_service_graph"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span,application_service_graph"
     depends_on:
       testserver:
         condition: service_started
