--- a/internal/test/integration/docker-compose-java-kafka-400.yml
+++ b/internal/test/integration/docker-compose-java-kafka-400.yml
@@ -65,9 +65,9 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_TRACES_INSTRUMENTATIONS: "kafka"
-      BEYLA_METRICS_INSTRUMENTATIONS: "kafka"
-      BEYLA_METRICS_FEATURES: "application"
+      BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "kafka"
+      BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "kafka"
+      BEYLA_OTEL_METRICS_FEATURES: "application"
       OTEL_KAFKA_TOPIC_UUID_CACHE_SIZE: "1000"
     depends_on:
       testserver:
