--- a/internal/test/integration/docker-compose-multiexec.yml
+++ b/internal/test/integration/docker-compose-multiexec.yml
@@ -131,7 +131,7 @@ services:
     pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
