--- a/internal/test/integration/docker-compose-nodejs-dist.yml
+++ b/internal/test/integration/docker-compose-nodejs-dist.yml
@@ -59,7 +59,7 @@ services:
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_METRICS_FEATURES: "application,application_span,application_process,application_service_graph"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span,application_process,application_service_graph"
     depends_on:
       testserver_b:
         condition: service_started
