--- a/internal/test/integration/docker-compose-other-grpc.yml
+++ b/internal/test/integration/docker-compose-other-grpc.yml
@@ -47,7 +47,7 @@ services:
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_PROMETHEUS_FEATURES: "application,application_span"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
       BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
