--- a/internal/test/integration/docker-compose-python-mysql.yml
+++ b/internal/test/integration/docker-compose-python-mysql.yml
@@ -55,9 +55,9 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_TRACES_INSTRUMENTATIONS: "sql"
-      BEYLA_METRICS_INSTRUMENTATIONS: "sql"
-      BEYLA_METRICS_FEATURES: "application"
+      BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "sql"
+      BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "sql"
+      BEYLA_OTEL_METRICS_FEATURES: "application"
       BEYLA_BPF_BUFFER_SIZE_MYSQL: 1024
     depends_on:
       testserver:
