--- a/internal/test/integration/docker-compose-python-redis.yml
+++ b/internal/test/integration/docker-compose-python-redis.yml
@@ -48,9 +48,9 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_TRACES_INSTRUMENTATIONS: "redis"
-      BEYLA_METRICS_INSTRUMENTATIONS: "redis"
-      BEYLA_METRICS_FEATURES: "application"
+      BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "redis"
+      BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "redis"
+      BEYLA_OTEL_METRICS_FEATURES: "application"
     depends_on:
       testserver:
         condition: service_started
