--- a/internal/test/integration/docker-compose-python.yml
+++ b/internal/test/integration/docker-compose-python.yml
@@ -42,7 +42,7 @@ services:
       BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_METRICS_FEATURES: "application,application_span,application_process,application_service_graph"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span,application_process,application_service_graph"
       BEYLA_PROMETHEUS_FEATURES: "application,application_span,application_service_graph"
 
     depends_on:
