--- a/internal/test/integration/docker-compose-java-kafka-400.yml
+++ b/internal/test/integration/docker-compose-java-kafka-400.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   kafka:
     restart: always
@@ -55,19 +53,18 @@ services:
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
-      BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
+      BEYLA_EXECUTABLE_PATH: "${BEYLA_EXECUTABLE_PATH}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
-      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "kafka"
-      BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "kafka"
-      BEYLA_OTEL_METRICS_FEATURES: "application"
+      BEYLA_TRACES_INSTRUMENTATIONS: "kafka"
+      BEYLA_METRICS_INSTRUMENTATIONS: "kafka"
+      BEYLA_METRICS_FEATURES: "application"
       OTEL_KAFKA_TOPIC_UUID_CACHE_SIZE: "1000"
     depends_on:
       testserver:
