--- a/internal/test/integration/docker-compose-python-self.yml
+++ b/internal/test/integration/docker-compose-python-self.yml
@@ -47,12 +47,9 @@ services:
       BEYLA_BPF_CONTEXT_PROPAGATION: "all"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
-      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "0ms"
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
       BEYLA_PROCESSES_INTERVAL: "100ms"
-      BEYLA_OTEL_METRICS_FEATURES: "application,application_span,application_process,application_service_graph"
-      BEYLA_BPF_BUFFER_SIZE_HTTP: 1024
-      BEYLA_BPF_MAX_TRANSACTION_TIME: "500ms"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_process,application_span,application_service_graph"
     depends_on:
       testserver:
         condition: service_started
