--- a/internal/test/integration/docker-compose-sampler.yml
+++ b/internal/test/integration/docker-compose-sampler.yml
@@ -35,7 +35,7 @@ services:
     pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span_otel"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
@@ -50,7 +50,7 @@ services:
 
   # OpenTelemetry Collector
   otelcol:
-    image: otel/opentelemetry-collector-contrib:0.104.0@sha256:e07e325e303e86f4a87a617491e921b579a92da6d404007394757ac910bf9587
+    image: otel/opentelemetry-collector-contrib:0.118.0@sha256:3f6274fe609da4f9964fbc2ef36b83d08d47964fbb11629251393590d3924072
     container_name: otel-col
     deploy:
       resources:
